[gd_scene load_steps=18 format=3 uid="uid://bb468p2jh4a7n"]

[ext_resource type="Script" uid="uid://c2und1mjhhba0" path="res://technical/events/whack-ilow.gd" id="1_3ab8d"]
[ext_resource type="Texture2D" uid="uid://bhlkdyjwexyik" path="res://assets/images/events/whack-a-low/bg.png" id="2_i18ow"]
[ext_resource type="PackedScene" uid="uid://b3br2qvlsk0m4" path="res://technical/events/whackilowHole.tscn" id="10_66mh6"]
[ext_resource type="Texture2D" uid="uid://ct4ktp5pdisbg" path="res://assets/images/events/whack-a-low/paper.png" id="16_2r3w4"]
[ext_resource type="Texture2D" uid="uid://bucepb3oy8gmh" path="res://assets/images/events/minigameTitle.png" id="19_l5vgr"]
[ext_resource type="Texture2D" uid="uid://sn2vh6yb4153" path="res://assets/images/events/filledStar.png" id="20_y7la5"]
[ext_resource type="Texture2D" uid="uid://bsjnsxl2xs2j0" path="res://assets/images/events/unfilledStar0.png" id="21_fpsa5"]
[ext_resource type="Texture2D" uid="uid://n4fjjq8ir18y" path="res://assets/images/events/unfilledStar1.png" id="22_pqyny"]
[ext_resource type="AudioStream" uid="uid://doov5lqi3y5cd" path="res://assets/sounds/fuckyeah.ogg" id="23_c6bc7"]
[ext_resource type="Texture2D" uid="uid://6nno2cik65i4" path="res://assets/images/events/fuckYeah.png" id="24_yu3rg"]
[ext_resource type="AudioStream" uid="uid://cahd8n2qup8t6" path="res://assets/music/roshambo.ogg" id="26_4atho"]

[sub_resource type="Animation" id="Animation_djedu"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(565, 993)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, 900)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/fuckYeah:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 900)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/paper:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 1000)]
}

[sub_resource type="Animation" id="Animation_e3o1v"]
resource_name = "pop"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.420448, 1, 2, 1),
"update": 0,
"values": [Vector2(565, 993), Vector2(565, 324), Vector2(565, 324), Vector2(565, -345)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.607843)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/paper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 5),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Vector2(576, 1000), Vector2(576, 324)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_itsToSIGN"
}]
}

[sub_resource type="Animation" id="Animation_fcjxb"]
resource_name = "title"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.450625, 1, 0.420448, 1),
"update": 0,
"values": [Vector2(-9, 900), Vector2(-9, 285), Vector2(-9, 285), Vector2(-9, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.63333, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.607843), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_allowToMove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(456, 128), Vector2(456, 104)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(515, 128), Vector2(515, 104)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/Star3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(574, 128), Vector2(574, 104)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/Star4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(633, 128), Vector2(633, 104)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("opening/Star5:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(692, 128), Vector2(692, 104)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("opening/Star1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("opening/Star2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("opening/Star3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("opening/Star4:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("opening/Star5:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("opening/paper:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(2.14355, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 1000)]
}

[sub_resource type="Animation" id="Animation_tlkvl"]
resource_name = "yes"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_endEvent"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/fuckYeah:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Vector2(576, 900), Vector2(576, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iiqyl"]
_data = {
&"RESET": SubResource("Animation_djedu"),
&"pop": SubResource("Animation_e3o1v"),
&"title": SubResource("Animation_fcjxb"),
&"yes": SubResource("Animation_tlkvl")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_4s42o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_y7la5")
}],
"loop": true,
"name": &"star",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_fpsa5")
}, {
"duration": 1.0,
"texture": ExtResource("22_pqyny")
}],
"loop": false,
"name": &"unstar",
"speed": 5.0
}]

[node name="minigame" type="Node2D"]
process_mode = 3
z_index = 100
script = ExtResource("1_3ab8d")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_i18ow")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iiqyl")
}

[node name="opening" type="Node2D" parent="."]
z_index = 30

[node name="ColorRect" type="ColorRect" parent="opening"]
offset_right = 1162.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="minigameLogo" type="Sprite2D" parent="opening"]
position = Vector2(565, 993)
texture = ExtResource("19_l5vgr")

[node name="Label" type="Label" parent="opening"]
offset_left = -9.0
offset_top = 900.0
offset_right = 1152.0
offset_bottom = 969.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Whack that stupid dog!!!!!11!!!1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star1" type="AnimatedSprite2D" parent="opening"]
modulate = Color(1, 1, 1, 0)
position = Vector2(456, 128)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star2" type="AnimatedSprite2D" parent="opening"]
position = Vector2(515, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star3" type="AnimatedSprite2D" parent="opening"]
position = Vector2(574, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star4" type="AnimatedSprite2D" parent="opening"]
position = Vector2(633, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star5" type="AnimatedSprite2D" parent="opening"]
position = Vector2(692, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="opening"]
stream = ExtResource("23_c6bc7")

[node name="fuckYeah" type="Sprite2D" parent="opening"]
position = Vector2(576, 900)
texture = ExtResource("24_yu3rg")

[node name="paper" type="Sprite2D" parent="opening"]
position = Vector2(576, 1000)
texture = ExtResource("16_2r3w4")

[node name="WhackilowHole1" parent="." instance=ExtResource("10_66mh6")]
offset_left = 259.0
offset_top = 88.0
offset_right = 435.0
offset_bottom = 230.0

[node name="WhackilowHole2" parent="." instance=ExtResource("10_66mh6")]
offset_left = 486.0
offset_top = 88.0
offset_right = 662.0
offset_bottom = 230.0

[node name="WhackilowHole3" parent="." instance=ExtResource("10_66mh6")]
offset_left = 711.0
offset_top = 88.0
offset_right = 887.0
offset_bottom = 230.0

[node name="WhackilowHole4" parent="." instance=ExtResource("10_66mh6")]
offset_left = 244.0
offset_top = 245.0
offset_right = 420.0
offset_bottom = 387.0

[node name="WhackilowHole5" parent="." instance=ExtResource("10_66mh6")]
offset_left = 486.0
offset_top = 245.0
offset_right = 662.0
offset_bottom = 387.0

[node name="WhackilowHole6" parent="." instance=ExtResource("10_66mh6")]
offset_left = 723.0
offset_top = 245.0
offset_right = 899.0
offset_bottom = 387.0

[node name="WhackilowHole7" parent="." instance=ExtResource("10_66mh6")]
offset_left = 219.0
offset_top = 408.0
offset_right = 395.0
offset_bottom = 550.0

[node name="WhackilowHole8" parent="." instance=ExtResource("10_66mh6")]
offset_left = 486.0
offset_top = 408.0
offset_right = 662.0
offset_bottom = 550.0

[node name="WhackilowHole9" parent="." instance=ExtResource("10_66mh6")]
offset_left = 763.0
offset_top = 408.0
offset_right = 939.0
offset_bottom = 550.0

[node name="gameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="charTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_4atho")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="charTimer" to="." method="_on_char_timer_timeout"]
